fixed formsubmit button pseuo classes being too long

--- a/css/contact.css
+++ b/css/contact.css
@@ -737,6 +737,12 @@ form p{
         margin-top: 25px;
     }
 
+    #contact-submit:hover .primary:before,
+    #contact-submit:hover .primary:after {
+        width: 90%;
+        height: 90%;
+    }
+
     .form-h4 {
         width: 750px;
         font-size: 25px;
